[tool.poetry]
name = "saarp_generator"
version = "0.1.0"
description = ""
authors = ["PH Lin"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
sunpy = "^3.0.0"
pip = "21.1.2"
scipy = "^1.6.3"
aiapy = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
